kic/2.9/grpcroute/dune-grpcroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
    - name: grpc
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - name: dune-kongproxy-me
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: grpcbin
spec:
  parentRefs:
    - name: kong
  hostnames:
    - "dune.kongproxy.me"
  rules:
    - backendRefs:
        - name: dune-quote-service
          port: 9001
